fix vertical alignment footer

--- a/packages/web3torrent/src/components/layout/layout-footer/LayoutFooter.scss
+++ b/packages/web3torrent/src/components/layout/layout-footer/LayoutFooter.scss
@@ -1,16 +1,23 @@
 @import '../../../styles/variables';
 footer {
+  display: flex;
+  flex-direction: row;
   width: 670px;
   margin: 0 auto;
   text-align: left;
-  font-size: 10px;
-  line-height: 14px;
-  height: 11px;
-  #footer-logo {
+  height: 15px;
+  
+  .footer-logo {
     height: 15px;
     width: 80px;
-    margin-bottom: -2px;
     margin-right: 5px;
+  }
+
+  .footer-text {
+    font-size: 10px;
+    line-height: 14px;
+    height: 12px;
+    margin-top: 1.5px;
   }
 }
 
